<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollViewImput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuantoAplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/quando_aplicar"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toTopOf="@id/scrollViewImput" />

            <EditText
                android:id="@+id/etValorAplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:hint="@string/rs"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toBottomOf="@id/tvQuantoAplicar" />

            <TextView
                android:id="@+id/tvVencimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/data_vencimento"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toBottomOf="@id/etValorAplicar" />

            <EditText
                android:id="@+id/etDataVencimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:hint="@string/data"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toBottomOf="@id/tvVencimento" />

            <TextView
                android:id="@+id/tvPercentualCDI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/quando_aplicar"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toBottomOf="@id/etDataVencimento" />

            <EditText
                android:id="@+id/etPercentualCDI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:hint="@string/porcent"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toBottomOf="@id/tvPercentualCDI" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/scrollViewImput"
                app:layout_constraintStart_toStartOf="@id/scrollViewImput"
                app:layout_constraintTop_toBottomOf="@id/etPercentualCDI" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>